# portfolio-analytics

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
resources/: portfolio_test.csv
src/datasource/: base.py  etrade_csv.py
src/lookups/: allocation.py  openai.py  service.py
src/portfolio/: allocation.py  portfolio.py
tests/portfolio/: test_allocation.py  test_portfolio.py
