[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Chet Mancini", email = "chetmancini@gmail.com"},
]
dependencies = [
    "pandas>=2.1.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.2",
    "ruff>=0.1.0",
]
