[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Chet Mancini", email = "chetmancini@gmail.com"},
]
dependencies = [
    "pandas>=2.1.1",
    "openai>=0.28.1",
    "requests>=2.31.0",
    "pydantic>=2.4.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.2",
    "ruff>=0.1.0",
    "ipython>=8.16.1",
]

[tool.pdm.scripts]
test = {cmd = "pytest", environment="dev"}

[tool.pdm.environments]
dev = {override=false, env_file=".env"}
